--- a/Proyecto_Final/Proyecto_final-gui/src/main/java/co/edu/eam/ingsoft/desarrollo/proyecto_final/vista/gui/VentanaOfertasEmpresa.form
+++ b/Proyecto_Final/Proyecto_final-gui/src/main/java/co/edu/eam/ingsoft/desarrollo/proyecto_final/vista/gui/VentanaOfertasEmpresa.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Ofertas Laborales"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -382,14 +383,14 @@
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="20" y="600" width="310" height="40"/>
+          <AbsoluteConstraints x="30" y="600" width="310" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="jTFSalario">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="20" y="480" width="310" height="40"/>
+          <AbsoluteConstraints x="30" y="480" width="310" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
